# GCS

atividade5-cmake/: CMakeLists.txt  makefile
atividade5-cmake/includes/: version.hpp.in
atividade5-cmake/sources/: main.cpp
